# Web-gRPC-Demo

./: README.md
Client/: ProtoGen.sh  README.md  index.html  package.json
Client/src/: App.vue
Client/src/api/: Greeter.client.ts  Greeter.ts
Proto/: Greeter.proto
Proxy/: REDME.md  envoy.yaml
Server/: CMakeLists.txt  Greeter.grpc.pb.cc  Greeter.grpc.pb.h  Greeter.pb.cc  Greeter.pb.h  ProtoGen.sh  README.md  Server.cc
